# Automobile-API

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/automobile_api/: manage.py
backend/automobile_api/admin_site/: admin.py
backend/automobile_api/api/: permissions.py  serializers.py  urls.py  views.py
backend/automobile_api/automobile_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/automobile_api/cars/: constants.py  forms.py  models.py  urls.py  validators.py  views.py
backend/automobile_api/cars/migrations/: 0001_initial.py  0002_initial.py  0003_alter_car_year.py  0004_alter_car_year.py  0005_alter_car_year.py
backend/automobile_api/core/management/commands/: load_test_data_from_csv.py
backend/automobile_api/templates/: base.html
backend/automobile_api/templates/cars/: create.html  delete.html  detail.html  index.html
backend/automobile_api/templates/includes/: comments.html  navbar.html
backend/automobile_api/templates/registration/: logged_out.html  login.html  password_change_done.html  password_reset_done.html
backend/automobile_api/tests/: base_test.py  test_auth.py  test_cars.py
backend/automobile_api/tests/test_data/: cars.csv  comments.csv  users.csv
backend/automobile_api/users/: forms.py  models.py
backend/automobile_api/users/migrations/: 0001_initial.py
