[tool.poetry]
name = "automobile-api"
version = "0.1.0"
description = "Test case for IT-Solutions"
authors = ["rodion <rpadakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
djoser = "^2.2.3"
django-bootstrap5 = "^24.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.poetry.group.docs.dependencies]
drf-yasg = "^1.21.7"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
